opam-version: "2.0"
name: "satysfi-fonts-asana-math-doc"
version: "000.958+1+satysfi0.0.4"
synopsis: "Document of SATySFi Font Package for Asana Math Fonts"
description: """
Document package for satysfi-fonts-asana-math
"""
maintainer: "MURASE Yuito <yuito.murase@gmail.com>"
authors: "MURASE Yuito <yuito.murase@gmail.com>"
license: "CC0-1.0"
homepage: "https://github.com/zeptometer/SATySFi-fonts-asana-math"
bug-reports: "https://github.com/zeptometer/SATySFi-fonts-asana-math/issues"
dev-repo: "git+https://github.com/zeptometer/SATySFi-fonts-asana-math.git"
depends: [
  "satysfi" {>= "0.0.4" & < "0.1.0"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-fonts-asana-math" {= "000.962+satysfi0.0.4"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "fonts-asana-math-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "fonts-asana-math-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
