opam-version: "2.0"
name: "satysfi-fonts-asana-math"
version: "2.37+satysfi0.0.4"
synopsis: "SATySFi Font Package for Asana Math Fonts"
description: """
SATySFi font package for Asana Math fonts.

This package installs fonts from http://mirrors.ctan.org/fonts/Asana-Math/.
"""
maintainer: "MURASE Yuito <yuito.murase@gmail.com>"
authors: "MURASE Yuito <yuito.murase@gmail.com>"
license: "OFL"
homepage: "https://github.com/zeptometer/SATySFi-fonts-asana-math"
bug-reports: "https://github.com/zeptometer/SATySFi-fonts-asana-math/issues"
dev-repo: "git+https://github.com/zeptometer/SATySFi-fonts-asana-math.git"
extra-source "Asana-Math.otf" {
  archive: "http://mirrors.ctan.org/fonts/Asana-Math/Asana-Math.otf"
  checksum: [
    "sha256=b0d9e681c08ff1f4dc6ebf085cc962585ec12cdbd25dc6225890b9f8fd12d568"
    "sha512=caedaf8dbbdc914a41492605b1ac69b020297bffa8a968e424f758d4aadb0c6391c71ed48b1645bc12eb1820a72d88425a0d2dfbd528c5071566284ad4f5f1b3"
  ]
}
depends: [
  "satysfi" {>= "0.0.3+dev2019.02.12" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
]
build: []
install: [
  ["satyrographos" "opam" "install"
   "-name" "fonts-asana-math"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
