opam-version: "2.0"
name: "satysfi-fonts-asana-math"
version: "000.958ver1+satysfi0.0.4"
synopsis: "SATySFi Font Package for Asana Math Fonts"
description: """
SATySFi font package for Asana Math fonts.

This package installs fonts from http://mirrors.ctan.org/fonts/Asana-Math/.
"""
maintainer: "MURASE Yuito <yuito.murase@gmail.com>"
authors: "MURASE Yuito <yuito.murase@gmail.com>"
license: "OFL"
homepage: "https://github.com/zeptometer/SATySFi-fonts-asana-math"
bug-reports: "https://github.com/zeptometer/SATySFi-fonts-asana-math/issues"
dev-repo: "git+https://github.com/zeptometer/SATySFi-fonts-asana-math.git"
extra-source "Asana-Math.otf" {
  archive: "http://mirrors.ctan.org/fonts/Asana-Math/Asana-Math.otf"
  checksum: [
    "sha256=9fa3bd7294acd349162ca119351212f7712d26442a3089abcb70bb327b03caf1"
    "sha512=b85ee0683e4fc3f046c80500780a37e0e9a0453fe3c3414118bd5adcf468c77704739fdcf009de494a8bbabf484b091d5a9ede56057a0b67af1ecd12ed6145a6"
  ]
}
depends: [
  "satysfi" {>= "0.0.4" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
]
build: []
install: [
  ["satyrographos" "opam" "install"
   "-name" "fonts-asana-math"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
