opam-version: "2.0"
name: "satysfi-fonts-dejavu"
version: "2.37"
synopsis: "SATySFi Font Package for DejaVu Fonts"
description: """
SATySFi font package for DejaVu fonts.

This package installs fonts from https://dejavu-fonts.github.io/.
"""
maintainer: "MURASE Yuito <yuito.murase@gmail.com>"
authors: "MURASE Yuito <yuito.murase@gmail.com>"
homepage: "https://github.com/zeptometer/SATySFi-fonts-dejavu"
bug-reports: "https://github.com/zeptometer/SATySFi-fonts-dejavu/issues"
dev-repo: "git+https://github.com/zeptometer/SATySFi-fonts-dejavu.git"
extra-source "Asana-Math.otf" {
  archive: "http://mirrors.ctan.org/fonts/Asana-Math/Asana-Math.otf"
  checksum: [
    "sha256=b0d9e681c08ff1f4dc6ebf085cc962585ec12cdbd25dc6225890b9f8fd12d568"
    "sha512=caedaf8dbbdc914a41492605b1ac69b020297bffa8a968e424f758d4aadb0c6391c71ed48b1645bc12eb1820a72d88425a0d2dfbd528c5071566284ad4f5f1b3"
  ]
}
depends: [
  "satysfi" {>= "0.0.4" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
]
build: [
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "fonts-dejavu"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
